2003-06-20  vino Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :
	* configure :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* lib/atom.cpp :
	* lib/atom.h :
	* lib/consttab.cpp :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/kb.cpp :
	* lib/kb.h :
	* lib/list.cpp :
	* lib/numberlist.cpp :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/smwrap.cpp :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/symtab.cpp :
	* lib/transtab.cpp :
	* lib/vlad.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :
	* main/Makefile.in :
	* main/operation.l :
	* main/operation.y :
	* main/program.l :
	* main/program.y :
	* main/vlad.cpp :
	* lib/config.h.in :
	* config.h.in :

	  - Build system fixup.

	  - config.h is now in the lib directory to allow it to be included in
	    the installation.

2003-06-18  vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/wrapper.h :
	* lib/wrapper.cpp :

	   - Prefixed each function with vlad_ to avoid namespace pollution
	     of linked apps.

2003-06-17  vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/wrapper.h :
	* lib/wrapper.cpp :

	  - Cleanup.

	  - Fixed the ifdef for smodels dependent function: will now return 
	    failure if used without smodels support.

2003-06-13  vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/atom.h :
	* lib/symtab.h :
	* lib/vlad.h :

	  - Moved macros to vlad.h to allow non-c++ programs to use them.

2003-06-10  vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/Makefile.in :
	* lib/wrapper.cpp :
	* lib/wrapper.h :

	  - Added C interface for kb.

2003-06-09  vino Crescini  <jcrescin@cit.uws.edu.au>

	* config.h.in :
	* configure :
	* configure.ac :

	  - Added --enable-wrapper to enable the c-style library wrapper.

	  - Added additional compiler warning checks.

	* lib/wrapper.h :
	* lib/wrapper.cpp :
	* lib/smwrap.h :
	* lib/smwrap.cpp :

	  - Renamed wrapper to smwrap.

2003-06-03  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure.ac :
	* lib/Makefile.in :
